position: fixed;   border-bottom: solid;   flex-direction: row;   justify-content: space-between;   font-family: Verdana;   font-size: 14px;   font-weight: bold;   align-items: center;   background-color: white;   z-index: 1;   height 80px; }  .mytimes {   color: MediumAquamarine; }  div.leftheader ul {   list-style-type: none;   display: inline-flex;   align-items: center;   border: solid; }  div.leftheader li {   padding-right: 10px; }    /* nav li { padding-right: 15px; }  nav ul {   list-style-type: none;   display: inline-flex;   margin-right: 30px;   flex-flow: row wrap;   }  header nav a {   Color: black;   }   */  nav.rightheader{   border: solid; }  nav.rightheader a {   color: black; }  nav.rightheader span {   flex-flow: row wrap;   margin-right: 30px;   color: black; }    .maincontainer {   border: solid;   display: flex;   width: 1232px;   margin: 0 auto 78px auto;   padding-top: 120px; }    .column {   display: flex;   flex-direction: column;   border: solid;   margin-right: 32px; }  .large.column {   width: 630px;   margin-right: 32px;   border: solid; }  .img_con.top {   background-image: url("../images/picnictable.png");   height: 300px;   font-size: 40px;   text-align: left;   width: 630px;   margin-top: 0; }  .img_con.mid {   background-image: url("../images/fall.png");   height: 300px; }  .img_con.bot {   background-image: url("../images/hipster.png");   width: 300px;

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -150,12 +150,12 @@ nav.rightheader span {
   border: solid;
 }
 
-.small.container p {
-  font-size: 32px;
+.small.column p {
+  font-size: 16px;
   font-weight: bold;
 }
 
-.small.container span {
+.small.column span {
   background-color: WhiteSmoke;
   font-family: Verdana;
   font-size: 12px;
